crates/tun-engine-macros/tests/compile_fail/non_default_derive.rs
use tun_engine_macros::freeze;

#[freeze]
#[derive(Clone)]
pub struct Bad {
    pub x: u32,
}

fn main() {}
